0_demo/3_1_deploy_demo-app-v2_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financial-reporting-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: financial-reporting-v2
  template:
    metadata:
      labels:
        app: financial-reporting-v2
    spec:
      containers:
      - name: financial-reporting-v2
        image: rteller/hello:indigo
        imagePullPolicy: Always
        ports:
        - containerPort: 80
