0_demo/4_1_scale_demo_app-v2_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: financial-reporting-v2
spec:
  replicas: 6
  selector:
    matchLabels:
      app: financial-reporting-v2
  template:
    metadata:
      labels:
        app: financial-reporting-v2
    spec:
      containers:
      - name: financial-reporting-v2
        image: rteller/hello:purple
        imagePullPolicy: Always
        ports:
        - containerPort: 80
