0_demo/1_3_bigip-ingress_as3_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-hello-world
  namespace: bigip-ingress
  labels:
    app: f5-hello-world
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: A1
    cis.f5.com/as3-pool: web_pool
spec:
  ports:
  - name: f5-hello-world
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: NodePort
  selector:
    app: nginx-ingress
    namespace: nginx-ingress
