0_demo/2_2_deploy_demo_app-v1_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financial-reporting-v1-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: financial-reporting-v1
