0_demo/3_2_create_demo-app-v2_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financial-reporting-v2-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: financial-reporting-v2
