0_demo/7_2_create_bigip-ingress_as3_Security_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-as3-security-service
  namespace: nginx-ingress
  labels:
    app: f5-as3-security-svc
    cis.f5.com/as3-tenant: as3_tenant
    cis.f5.com/as3-app: as3_security_app
    cis.f5.com/as3-pool: as3_security_pool
spec:
  ports:
  - name: f5-as3-security-svc
    port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    app: nginx-ingress-controller-b
