0_demo/1_1_create_bigip-ingress_Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bigip-ingress
  namespace: nginx-ingress
  annotations:
  # See the k8s-bigip-ctlr documentation for information about
  # all Ingress Annotations
  # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-ingress-annotations
    virtual-server.f5.com/partition: "nginx"
spec:
  backend:
    # The name of the Service you want to expose to external traffic
    serviceName: nginx-ingress-controller-a
    servicePort: 80
